package Create_Pokemon;

import Create_Pokemon.Powers.*;
import Players.Joueur;

import java.security.cert.Extension;
import java.util.concurrent.ThreadLocalRandom;
public class Pokemon
{
    protected String m_nom;
    protected int m_pvMax;
    protected int m_pv;
    protected int m_attaque;
    Power m_pouvoir;
    protected Element m_element;

    /**
     * Constructeur Pokemon() : Crée un pokemon avec un nom, un élément, des PV et des dégats d'attaque
     */

    public Pokemon(){
        m_nom = Initialisation.getNom(); //Méthode statique ?
        m_pvMax = ThreadLocalRandom.current().nextInt(10, 21) * 10; //multiple de 10 entre 100 et 200
        m_attaque = ThreadLocalRandom.current().nextInt(1, 5) * 10;//multiple de 10 entre 10 et 40
        m_pv = m_pvMax;
        int nomElement = ThreadLocalRandom.current().nextInt(0,4);
        switch (nomElement){
            case 0: m_element = new Element("Eau");break;
            case 1: m_element = new Element("Feu");break;
            case 2: m_element = new Element("Air");break;
            default : m_element = new Element("Terre");
        }
        int definitElus = ThreadLocalRandom.current().nextInt(0,6);
        if (definitElus == 5){
            String pouvoirDonne = Initialisation.getPouvoir();
            switch (pouvoirDonne){
                case "Berserk" : m_pouvoir = new Berserk();
                case "Soin simple" : m_pouvoir = new SoinSimple();break;
                case "Soin de zone" : m_pouvoir = new SoinZone() ; break;
                case "Kamikaze" : m_pouvoir = new Kamikaze(); break;
                case "Affinité Ether" : m_pouvoir = new AffiniteEther(); break;
                case "Affinité Plomb" : m_pouvoir = new AffinitePlomb(); break;
                case "Usurpation" : m_pouvoir = new Usurpation() ; break;
                default: m_pouvoir = new ExtensionTerritoire();
            }
        }
    }

    /**
     * Méthode getNom() : Affiche le nom du Pokémon
     * @return m_nom : nom du Pokémon
     */

    public String getNom(){
        return m_nom;
    }

    public Power getPower(){
        return m_pouvoir;
    }

    /**
     * Méthode getELement() : Affiche l'élément du Pokémon
     * @return m_element : Element du Pokemon
     */

    public Element getElement() {
        return m_element;
    }

    /**
     * Méthode getAttaque() : Affiche les dégats d'attaque du Pokémon
     * @return m_attaque : Attaque du Pokémon
     */

    public int getAttaque(){
        return m_attaque;
    }

    public void setAttaque(int newValue){
        m_attaque = newValue;
    }

    public void estSoigne(int soin){
        if (m_pv + soin <= m_pvMax){
            m_pv += soin;
        }
        else { m_pv = m_pvMax; }
    }

    /**
     * Méthode getPV() : Affiche les PV actuels du Pokémon
     * @return m_pv
     */

    public int getPV(){
        return m_pv;
    }

    /**
     * Méthode getPV() : Affiche les PV Max du Pokémon
     * @return m_pvMax
     */
    public int getPVMax(){return m_pvMax;}

    public boolean possedePouvoir(){
        if (m_pouvoir != null){
            return true;
        }
        return false;
    }

    /**
     * Méthode attaque() : Permet de gérer l'action d'attaque d'un pokémon vers un autre
     * @param autre : Pokémon attaqué
     */

    public void attaque(Pokemon autre, Joueur dresseurAutre){
        if(m_element.m_avantage.equals(autre.m_element.getElement())){
            autre.m_pv -= (m_attaque+10);
        } else if (m_element.m_desavantage.equals(autre.m_element.getElement())){
            autre.m_pv -= (m_attaque-10);
        }
        else {autre.m_pv -= m_attaque;}

        if (autre.m_pv <= 0){
            dresseurAutre.perdPokemon(autre);
        }
    }

    /**
     * Méthode toString() : Renvoie les informations à propos du Pokémon
     * @return "Nom : ... Type : ... PV : ... Attaque : ..."
     */

    @Override
    public String toString()
    {
        return "Nom : "+ m_nom + "\nType : " + m_element.getElement() + "\nPV : " + m_pv + "\nAttaque : " + m_attaque;
    }

}